syntax = "proto3";

package volume;
import "protos/common.proto";

message VolumeInfo {
  common.FixedSpecs specs = 1;
  common.Timestamp created = 2;
  optional string name = 3;
}

message BranchInfo {
  common.Commit commit = 1;
}

message TagInfo {
  common.Commit commit = 1;
}

message ChunkContent {
  message Block {
    common.Hash cid = 1;
  }

  message Cluster {
    common.Hash cid = 1;
  }

  message Snapshot {
    common.Hash cid = 1;
  }

  oneof type {
    Block block = 11;
    Cluster cluster = 12;
    Snapshot snapshot = 13;
  }
}

message ChunkInfo {
  common.Uuid chunk_id = 1;
  common.FixedSpecs specs = 2;
  common.Timestamp created = 3;
}

message ChunkIndex {
  common.Uuid chunk_id = 1;
  map<uint64, ChunkContent> content = 2;
}

message Manifest {
  common.Uuid manifest_id = 1;
  common.FixedSpecs specs = 2;
  common.Timestamp created = 3;
}